--- a/parckman/index.html
+++ b/parckman/index.html
@@ -23,31 +23,6 @@
   </style>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
   <script>
-      /*
-      ============================================
-      ОПИСАНИЕ ИГРЫ "MASTER PARKING"
-      ============================================
-
-      Цель игры:
-      Игрок должен как можно быстрее и точнее припарковать автомобиль на заданное парковочное место.
-      На пути игрока встречаются препятствия: другие автомобили (NPC), мотоциклисты, пешеходы и т.д.
-
-      Базовая механика:
-      1. Игрок управляет автомобилем, который может двигаться только по дорогам.
-      2. На карте есть парковочные места, на которые нужно припарковаться.
-      3. NPC (другие автомобили, мотоциклисты, пешеходы) двигаются по своим маршрутам и создают препятствия.
-      4. Игрок должен избегать столкновений с NPC и другими объектами.
-      5. Победа засчитывается, когда игрок успешно паркуется на заданное место за минимальное время.
-
-      Особенности:
-      - Дороги: все объекты (игрок и NPC) могут двигаться только по дорогам.
-      - Парковочные места: на них могут стоять NPC, и на одно из них нужно припарковаться.
-      - NPC: двигаются по заданным маршрутам, могут заезжать и выезжать с парковочных мест.
-      - Физика: реализована с использованием движка Phaser 3 (arcade physics).
-
-      ============================================
-    */
-  
     const config = {
       type: Phaser.AUTO,
       width: 800,
@@ -145,49 +120,12 @@
         { x: 100 + npcOffset, y: y - 50 }, // Движение вверх
         { x, y: y - 50 }, // Подъезд к парковочному месту (начало)
         { x, y: y - 20 }, // Подъезд к парковочному месту (близко)
+        { x, y: y - 10 }, // Точка для разворота (перед парковочным местом)
         { x, y }  // Заезд на парковочное место (очень близко)
       ];
     });
 
     function preload() {
-	 /*
-		============================================
-		ПАМЯТКА О РАСЧЕТЕ КООРДИНАТ
-		============================================
-
-		1. Исходная система координат:
-		   - Карта имеет размер 2000x2000 пикселей.
-		   - Все объекты (парковочные места, дороги, NPC и т.д.) задаются в этой системе.
-
-		2. Масштабирование:
-		   - Игровое поле отображается в окне 800x800 пикселей.
-		   - Коэффициент масштабирования: scaleFactor = 800 / 2000 = 0.4.
-		   - Чтобы перевести координаты из системы 2000x2000 в 800x800, используйте формулу:
-			   scaledX = (x / 2000) * 800 + offsetX;
-			   scaledY = (y / 2000) * 800 + offsetY;
-
-		3. Смещения:
-		   - offsetX и offsetY: Смещения для парковочных мест и других объектов.
-		   - roadOffsetX и roadOffsetY: Дополнительные смещения для дорог.
-
-		4. Координаты маршрута NPC:
-		   - Координаты маршрута NPC задаются в масштабированной системе (800x800).
-		   - Стартовые координаты (startX, startY) уже масштабированы.
-		   - Остальные точки маршрута (например, 700 - npcOffset, 100 + npcOffset) также задаются в 800x800.
-
-		5. Пример:
-		   - Если координата на карте 2000x2000: x = 361, y = 380,
-			 то в масштабированной системе:
-			   scaledX = (361 / 2000) * 800 + offsetX;
-			   scaledY = (380 / 2000) * 800 + offsetY;
-
-		6. Важно:
-		   - Не масштабируйте координаты маршрута NPC, если они уже заданы в 800x800.
-		   - Для парковочных мест и дорог используйте функцию scaleCoords.
-
-		============================================
-	 */		
-	
       // Загрузка изображений
       this.load.image('background', 'assets/parking_map.png'); // Фон парковки
       this.load.image('entrance', 'assets/entrance.png'); // Въезд
@@ -245,50 +183,61 @@
       });
     }
 
-	function update() {
-	  // Обновление движения NPC
-	  npcs.forEach(npc => {
-		if (!npc.isWaiting) { // Если NPC не в состоянии ожидания
-		  const target = npc.route[npc.routeIndex];
-		  const distance = Phaser.Math.Distance.Between(npc.x, npc.y, target.x, target.y);
+    function update() {
+      // Обновление движения NPC
+      npcs.forEach(npc => {
+        if (!npc.isWaiting) { // Если NPC не в состоянии ожидания
+          const target = npc.route[npc.routeIndex];
+          const distance = Phaser.Math.Distance.Between(npc.x, npc.y, target.x, target.y);
 
-		  if (distance < 5) { // Если NPC близко к точке
-			npc.routeIndex++;
+          if (distance < 5) { // Если NPC близко к точке
+            npc.routeIndex++;
 
-			// Если NPC завершил маршрут
-			if (npc.routeIndex >= npc.route.length) {
-			  // Останавливаем NPC на парковочном месте
-			  npc.setVelocity(0, 0); // Сбрасываем скорость
-			  npc.routeIndex = 0; // Сбрасываем индекс маршрута
+            // Если NPC завершил маршрут
+            if (npc.routeIndex >= npc.route.length) {
+              // Останавливаем NPC на парковочном месте
+              npc.setVelocity(0, 0); // Сбрасываем скорость
+              npc.routeIndex = 0; // Сбрасываем индекс маршрута
 
-			  // Выравниваем NPC строго перпендикулярно дороге (угол 0 градусов)
-			  npc.rotation = 0; // 0 градусов (перпендикулярно дороге)
+              // Выравниваем NPC строго перпендикулярно дороге (угол 0 градусов)
+              npc.rotation = 0; // 0 градусов (перпендикулярно дороге)
 
-			  // Добавляем задержку перед повторным выездом
-			  npc.isWaiting = true;
-			  const delay = Phaser.Math.Between(1500, 5000); // Задержка в миллисекундах
-			  this.time.delayedCall(delay, () => {
-				npc.isWaiting = false; // Завершаем ожидание
-				moveNPCToNextPoint(npc); // Начинаем движение
-			  }, [], this);
-			} else {
-			  // Продолжаем движение к следующей точке
-			  moveNPCToNextPoint(npc);
-			}
-		  }
-		}
-	  });
-	}
+              // Добавляем задержку перед повторным выездом
+              npc.isWaiting = true;
+              const delay = Phaser.Math.Between(1500, 5000); // Задержка в миллисекундах
+              this.time.delayedCall(delay, () => {
+                npc.isWaiting = false; // Завершаем ожидание
+                moveNPCToNextPoint(npc); // Начинаем движение
+              }, [], this);
+            } else {
+              // Продолжаем движение к следующей точке
+              moveNPCToNextPoint(npc);
+            }
+          }
+        }
+      });
+    }
 
     function moveNPCToNextPoint(npc) {
       const target = npc.route[npc.routeIndex];
       const angle = Phaser.Math.Angle.Between(npc.x, npc.y, target.x, target.y);
 
+      // Проверяем, находится ли NPC на этапе разворота
+      const isRotating = npc.routeIndex === npc.route.length - 2; // Предпоследняя точка
+
+      if (isRotating) {
+        // Разворачиваем NPC на 90 градусов (в состояние 0 градусов)
+        npc.rotation = 0; // Устанавливаем угол 0 градусов (перпендикулярно дороге)
+      } else {
+        // Обычное движение
+        npc.rotation = angle + Math.PI / 2; // Стандартный поворот
+      }
+
       // Расстояние до парковочного места (последняя точка маршрута)
       const parkingSpot = npc.route[npc.route.length - 1];
       const distanceToParkingSpot = Phaser.Math.Distance.Between(npc.x, npc.y, parkingSpot.x, parkingSpot.y);
 
-      // Замедление, если NPC находится на последних этапах маршрута и в радиусе 50 пикселей от парковочного места
+      // Замедление, если NPC находится на последних этапах маршрута
       const isParkingMovement = (
         npc.routeIndex >= npc.route.length - 3 && // Последние 3 точки маршрута
         distanceToParkingSpot <= 50 // Расстояние до парковочного места меньше 50 пикселей
@@ -297,7 +246,6 @@
 
       // Устанавливаем скорость и поворот NPC
       npc.setVelocity(Math.cos(angle) * speed, Math.sin(angle) * speed);
-      npc.rotation = angle + Math.PI / 2;
     }
 
     function createInvisibleParkingSpots(scene) {
